--- a/algorithm/14redux.html
+++ b/algorithm/14redux.html
@@ -1,1 +1,9 @@
 https://medium.com/swlh/what-is-redux-b16b42b33820
+
+Redux is a way to manage the “state” or we can say it is a cache or storage that can be accessed by all components with a structured way. It has to be accessed through a “Reducer” and “Actions”
+
+Reducer 
+Actions 
+Component 
+Dispatch 
+Store 
