--- a/algorithm/16dom.html
+++ b/algorithm/16dom.html
@@ -1,1 +1,4 @@
 https://www.geeksforgeeks.org/dom-document-object-model/
+
+HTML DOM (Document Object Model) is a hierarchical representation of HTML documents. It defines the structure and properties of elements on a webpage,
+ enabling JavaScript to dynamically access, manipulate, and update content, enhancing interactivity and functionality.
