--- a/algorithm/18websockets.html
+++ b/algorithm/18websockets.html
@@ -1,1 +1,12 @@
 https://www.mdfaisal.com/blog/learn-websockets-with-nodejs-and-reactjs
+
+WebSocket is a technology that enables us to exchange data between the web server and a client in real time.
+
+websockets are bi-directional.
+Websockets use a single TCP connection.
+WebSocket connections are persistent.
+It’s usually more efficient than HTTP connections.
+
+example:
+npm:Socket.io 
+
