--- a/algorithm/23internalization_localization.html
+++ b/algorithm/23internalization_localization.html
@@ -1,1 +1,21 @@
-https://www.geeksforgeeks.org/explain-about-internationalization-and-localization/?ref=ml_lbp
+
+
+nternationalization (i18n):
+
+Internationalization is a way to allow software or service to be localized easily to a target audience. They entail the best practices and design patterns that one should follow in order to allow better localization and stand-alone utility.
+Scope:
+Multi-language support
+Multi-regional support, i.e. support for multiple locations and regions
+Support for multiple timezones and date-time formats
+Support for multiple number formats
+
+
+Localization (l10n):
+Scope:
+Specific language translation
+Specific timezone and date-time format compatible
+Specific location and regional support
+Specific number format support
+
+Implement for Internationalization in react 
+https://www.geeksforgeeks.org/implementing-internationalization-in-react-components/?ref=ml_lbp
