--- a/algorithm/24caching.html
+++ b/algorithm/24caching.html
@@ -1,2 +1,6 @@
 https://prerender.io/blog/caching-in-javascript-and-how-it-affects-seo-performance/
-https://www.geeksforgeeks.org/api-response-caching-using-apicache-middleware-in-node-js/
+
+1.Caching Using LocalStorage
+2.Using Cache API
+example:
+https://medium.com/javascript-dots/cache-api-in-javascript-644380391681
