--- a/algorithm/28cdn.html
+++ b/algorithm/28cdn.html
@@ -1,2 +1,15 @@
 https://www.cloudflare.com/learning/cdn/what-is-a-cdn/
 https://medium.com/@saman.rajabii/how-to-implement-cdn-with-node-js-and-openresty-9a32d85fa49d
+
+A content delivery network (CDN) is a geographically distributed group of servers that caches content close to end users.
+
+A CDN allows for the quick transfer of assets needed for loading Internet content, including HTML pages, JavaScript files, stylesheets, images, and videos.
+
+Benefits;
+Improving website load times 
+Reducing bandwidth costs 
+Increasing content availability and redundancy
+Improving website securit
+
+At its core, a CDN is a network of servers linked together with the goal of delivering content as quickly, cheaply, reliably, and securely as possible. 
+
