--- a/algorithm/29micro_frontend_architecture.html
+++ b/algorithm/29micro_frontend_architecture.html
@@ -1,1 +1,8 @@
 https://medium.com/appfoster/a-comprehensive-guide-to-micro-frontend-architecture-cc0e31e0c053
+
+1.Independent Development and Deployment
+2.Enhanced Scalability and Maintainability
+3.Technology Flexibility and Polyglot Architecture
+4.Improved Team Collaboration and Autonomy
+
+Checking with Amol
