--- a/algorithm/33accessebility.html
+++ b/algorithm/33accessebility.html
@@ -1,1 +1,13 @@
 https://www.geeksforgeeks.org/accessibility-best-practices/
+
+1.Provide Alternative Text for Non-Text Content:
+2.Ensure Proper Keyboard Navigation:
+3.Proper Color Contrast:
+4.Use Semantic HTML:
+5.Provide Accessible Forms:
+
+example;
+1.aria-labelledby
+2.aria-label
+3.tabindex 
+4.role 
