--- a/algorithm/35CI_CD.html
+++ b/algorithm/35CI_CD.html
@@ -1,1 +1,9 @@
 https://prathasaxena30.medium.com/ci-cd-automation-guide-for-front-end-developers-134c774d32d4
+
+Continuous Integration(CI)
+After the commit has merged into the repo, the CI pipeline gets triggered. This pipeline runs the same checks as the PR pipeline with some important additions. This pipeline runs integration tests to test the project as a whole. If any of the checks fail, the code needs to be fixed before it can be prepared for deployment or delivery
+
+Continuous Deployment(CD)
+CI pipeline is also responsible for creating and building artifacts. After the successful creation/building of the artifacts CD pipeline gets triggered.
+
+check with amol
