--- a/algorithm/38component_design_frontend_backend.html
+++ b/algorithm/38component_design_frontend_backend.html
@@ -1,1 +1,9 @@
 https://www.geeksforgeeks.org/how-to-connect-front-end-and-backend/
+
+1.RESTful APIs:
+2. WebSockets:
+3. Server-Side Rendering (SSR):
+In Server-Side Rendering, the server crafts the webpage’s HTML and sends it to the browser, sparing the client’s browser from this hefty task.
+ The initial page loads much more quickly with this technique, which also improves search engine optimisation (SEO) and makes it easier for search engines to understand the content.
+4. GraphQL
+t gives developers a more effective, adaptable, and developer-friendly method of retrieving data 
