--- a/algorithm/5event_loop.html
+++ b/algorithm/5event_loop.html
@@ -1,1 +1,12 @@
 https://www.geeksforgeeks.org/what-is-an-event-loop-in-javascript/
+
+JavaScript’s event loop is the core mechanism that enables asynchronous operations. 
+Though single-threaded, it manages tasks efficiently. Imagine it as a queue system: events like user interactions or network requests are added to the queue, and the engine processes them one by one. 
+This allows JavaScript to handle non-blocking tasks without freezing, keeping the application responsive even while waiting for data or other operations
+
+
+1.Call Stack
+2.Callback Queue:
+3.Event Loop
+4.Execution
+5.Callback Execution
