--- a/algorithm/33accessebility.html
+++ b/algorithm/33accessebility.html
@@ -11,3 +11,36 @@ example;
 2.aria-label
 3.tabindex 
 4.role 
+
+
+<div role="radiogroup" aria-labelledby="legend25" id="radiogroup25">
+    <p id="legend25">Ipsum and lorem?</p>
+    <div>
+      <span
+        role="radio"
+        aria-checked="false"
+        tabindex="0"
+        aria-labelledby="q25_radio1-label"
+        data-value="True"></span>
+      <label id="q25_radio1-label">True</label>
+    </div>
+    <div>
+      <span
+        role="radio"
+        aria-checked="false"
+        tabindex="0"
+        aria-labelledby="q25_radio2-label"
+        data-value="False"></span>
+      <label id="q25_radio2-label">False</label>
+    </div>
+    <div>
+      <span
+        role="radio"
+        aria-checked="true"
+        tabindex="0"
+        aria-labelledby="q25_radio3-label"
+        data-value="huh?"></span>
+      <label id="q25_radio3-label">What is the question?</label>
+    </div>
+  </div>
+  
