--- a/algorithm/13debounce_throttling/1debounce_compare.html
+++ b/algorithm/13debounce_throttling/1debounce_compare.html
@@ -1,7 +1,8 @@
 <button id="myButton">Click Me</button>
 <p id="onButtonClick">You clicked me 0 times</p>
 
-
+//Debouncing will bunch a series of sequential calls to a function into a single call to that function.
+//It ensures that one notification is made for an event that fires multiples times.
 <script>
     let counter = 1;
 
