--- a/algorithm/13debounce_throttling/2throttling_compare.html
+++ b/algorithm/13debounce_throttling/2throttling_compare.html
@@ -1,6 +1,9 @@
 <button id="myButton">Click Me</button>
 <p id="onButtonClick"></p>
 
+//Throttling will delay executing a function. It will reduce the notification of an event that fires multiple times.
+//It will callet at regular intervals
+
 <script>
     let counter = 1;
 const clickHandler = () => {
