--- a/algorithm/45.webworker.html
+++ b/algorithm/45.webworker.html
@@ -1,1 +1,3 @@
 https://www.freecodecamp.org/news/how-webworkers-work-in-javascript-with-example/
+
+You can simply create a thread – that is a web worker – and let the web worker take care of the complex stuff.  
