--- a/CSS/19modal.html
+++ b/CSS/19modal.html
@@ -36,7 +36,34 @@
 <body>
 
 <button id="myBtn">Open Modal</button>
+<div>
+  nd not just the library! When you replay a user session in SessionStack, we have to render everything that happened in your user’s browser at the time the problem occurred, and we have to reconstruct the whole state, allowing you to jump back and forth in the session timeline. In order to make this possible, we’re heavily employing the async opportunities that JavaScript provides.
 
+Interested in SessionStack? Get started in minutes with our Free plan.
+
+Happy with SessionStack? Leave a review and get a Gift card!
+</div>
+<div>
+  nd not just the library! When you replay a user session in SessionStack, we have to render everything that happened in your user’s browser at the time the problem occurred, and we have to reconstruct the whole state, allowing you to jump back and forth in the session timeline. In order to make this possible, we’re heavily employing the async opportunities that JavaScript provides.
+
+Interested in SessionStack? Get started in minutes with our Free plan.
+
+Happy with SessionStack? Leave a review and get a Gift card!
+</div>
+<div>
+  nd not just the library! When you replay a user session in SessionStack, we have to render everything that happened in your user’s browser at the time the problem occurred, and we have to reconstruct the whole state, allowing you to jump back and forth in the session timeline. In order to make this possible, we’re heavily employing the async opportunities that JavaScript provides.
+
+Interested in SessionStack? Get started in minutes with our Free plan.
+
+Happy with SessionStack? Leave a review and get a Gift card!
+</div>
+<div>
+  nd not just the library! When you replay a user session in SessionStack, we have to render everything that happened in your user’s browser at the time the problem occurred, and we have to reconstruct the whole state, allowing you to jump back and forth in the session timeline. In order to make this possible, we’re heavily employing the async opportunities that JavaScript provides.
+
+Interested in SessionStack? Get started in minutes with our Free plan.
+
+Happy with SessionStack? Leave a review and get a Gift card!
+</div>
 <!-- The Modal -->
 <div id="myModal" class="modal">
   <!-- Modal content -->
