--- a/algorithm/51_largest_two_array.html
+++ b/algorithm/51_largest_two_array.html
@@ -1,3 +1,20 @@
 <script>
-    let arr=[];
+    let arr=[1,3,4,99,22,11];
+    
+    function largestDetails(){
+            let temp = arr[0];
+            let index = 0;
+           for(let i=1;i<arr.length;i++){
+               if(temp<arr[i]){
+                    temp=arr[i];
+                    index = i;
+               }
+           }
+           arr.splice(index,1);
+    }
+
+    for(let j=0;j<2;j++){
+        largestDetails();
+    }
+    console.log(arr);
 </script>
